# gtest_example

./: .clang-format  .gitignore  CMakeLists.txt  README.md
tests/: testgtest.cpp
